--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -41,11 +41,12 @@
     <!-- Tulisan Welcome -->
     <TextView
         android:id="@+id/welcome_tpq"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/logo_mitra"
         android:layout_marginTop="20dp"
+        android:gravity="center"
         android:text="WELCOME\nTPQ\nROUDLOTUL ILMI"
         android:textAlignment="center"
         android:textColor="#F0F9DF"
