--- a/app/src/main/res/values/styles2.xml
+++ b/app/src/main/res/values/styles2.xml
@@ -1,9 +1,11 @@
-<style name="JilidButtonStyle">
-    <item name="android:layout_width">match_parent</item>
-    <item name="android:layout_height">57dp</item>
-    <item name="android:layout_marginTop">15dp</item>
-    <item name="android:background">@drawable/rectangle_8</item>
-    <item name="android:textColor">#000</item>
-    <item name="android:textSize">26sp</item>
-    <item name="android:gravity">center</item>
-</style>
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+    <!-- Style untuk Button Jilid - HANYA styling, TANPA layout attributes -->
+    <style name="JilidButtonStyle">
+        <item name="android:background">@drawable/rectangle_8</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">26sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+</resources>
